aligned colors and fixed font sizes for ts_states

--- a/experiment/simulation/styles.css
+++ b/experiment/simulation/styles.css
@@ -1523,6 +1523,6 @@ pointer-events: auto;
     margin: 10px;
   }
   .tabset > label{
-    font-size:15px;
+    font-size:14px;
   }
 }
